--- a/package.json
+++ b/package.json
@@ -12,20 +12,24 @@
     "@hookform/resolvers": "^5.0.1",
     "@radix-ui/react-dialog": "^1.1.11",
     "@radix-ui/react-label": "^2.1.3",
+    "@radix-ui/react-separator": "^1.1.4",
     "@radix-ui/react-slot": "^1.2.0",
     "@radix-ui/react-tabs": "^1.1.4",
     "axios": "^1.8.4",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "dotenv": "^16.5.0",
+    "embla-carousel-react": "^8.6.0",
     "lucide-react": "^0.488.0",
     "motion": "^12.7.3",
     "next": "15.3.0",
     "next-themes": "^0.4.6",
+    "nextjs-progressbar": "^0.0.16",
     "nookies": "^2.5.2",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.56.0",
+    "react-icons": "^5.5.0",
     "sonner": "^2.0.3",
     "tailwind-merge": "^3.2.0",
     "tw-animate-css": "^1.2.5",
